// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with har record playwright should generate har file with contents matching snapshot: Test results.json 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 15,
    "fileName": "noise_removed/packages/root-cause-core/lib/with-har-record.test.ts",
    "hasNetworkLogs": true,
    "systemInfo": Object {
      "automationFramework": "playwright",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "N/A",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 720,
        "width": 1280,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "success": true,
    },
    "testFullName": "with har record playwright should generate har file with contents matching snapshot",
    "testName": "should generate har file with contents matching snapshot",
    "timestamp": 2,
  },
  "steps": Array [
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 4,
      "fnName": "goto",
      "index": 1,
      "mhtmlFile": "1.document.mhtml",
      "name": "goto \\"http://jsbin.testim.io/ces\\"",
      "pageId": 0,
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 3,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_goto",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 207,
          },
        ],
        "codeLines": Array [
          "      const { page: playedPage, endTest } = attachController;",
          "      // The delay + mousedown handler inside jsbin is to make sure the requests will stay under specific test",
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
        ],
        "column": 7,
        "fromRowNumber": 204,
        "row": 207,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 210,
      },
      "text": "http://jsbin.testim.io/ces",
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 6,
      "fnName": "click",
      "index": 2,
      "mhtmlFile": "2.document.mhtml",
      "name": "click \\"[data-job=GET_OK]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "[data-job=GET_OK]",
      "startTimestamp": 5,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 208,
          },
        ],
        "codeLines": Array [
          "      // The delay + mousedown handler inside jsbin is to make sure the requests will stay under specific test",
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
        ],
        "column": 7,
        "fromRowNumber": 205,
        "row": 208,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 211,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [
        Object {
          "args": Array [],
          "column": 0,
          "level": "error",
          "line": 0,
          "text": "Failed to load resource: the server responded with a status of 404 ()",
          "timestamp": 8,
          "url": "https://postman-echo.com/status/404",
        },
      ],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "mhtmlFile": "3.document.mhtml",
      "name": "click \\"[data-job=GET_404]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "[data-job=GET_404]",
      "startTimestamp": 7,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 209,
          },
        ],
        "codeLines": Array [
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
        ],
        "column": 7,
        "fromRowNumber": 206,
        "row": 209,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 212,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "mhtmlFile": "4.document.mhtml",
      "name": "click \\"[data-job=POST_OK]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "[data-job=POST_OK]",
      "startTimestamp": 10,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 210,
          },
        ],
        "codeLines": Array [
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
          "      await endTest({",
        ],
        "column": 7,
        "fromRowNumber": 207,
        "row": 210,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 213,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [
        Object {
          "args": Array [],
          "column": 0,
          "level": "error",
          "line": 0,
          "text": "Failed to load resource: the server responded with a status of 404 ()",
          "timestamp": 13,
          "url": "https://postman-echo.com/status/404",
        },
      ],
      "endTimestamp": 14,
      "fnName": "click",
      "index": 5,
      "mhtmlFile": "5.document.mhtml",
      "name": "click \\"[data-job=POST_404]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "[data-job=POST_404]",
      "startTimestamp": 12,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 211,
          },
        ],
        "codeLines": Array [
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
          "      await endTest({",
          "        success: true,",
        ],
        "column": 7,
        "fromRowNumber": 208,
        "row": 211,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 214,
      },
      "unhandledExceptions": Array [],
    },
  ],
}
`;

exports[`with har record playwright should generate har file with contents matching snapshot: har file content 1`] = `
Object {
  "log": Object {
    "creator": Object {
      "comment": "Created during a test executed by Testim.",
      "name": "Testim",
      "version": "1.0",
    },
    "entries": Array [
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin.testim.io/ces",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/js/render/edit.js?4.1.4",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/css/edit.css",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/images/favicon.png",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "https://postman-echo.com/status/200",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "https://postman-echo.com/status/404",
        },
        "response": Object {
          "redirectURL": "",
          "status": 404,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "POST",
          "postData": undefined,
          "url": "https://postman-echo.com/post",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "POST",
          "postData": undefined,
          "url": "https://postman-echo.com/status/404",
        },
        "response": Object {
          "redirectURL": "",
          "status": 404,
          "statusText": "",
        },
      },
    ],
    "pages": Array [
      Object {
        "_URL": undefined,
        "title": "http://jsbin.testim.io/ces",
      },
    ],
    "version": "1.2",
  },
}
`;

exports[`with har record puppeteer should generate har file with contents matching snapshot: Test results.json 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 15,
    "fileName": "noise_removed/packages/root-cause-core/lib/with-har-record.test.ts",
    "hasNetworkLogs": true,
    "systemInfo": Object {
      "automationFramework": "puppeteer",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "HeadlessChrome/88.0.4298.0",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 600,
        "width": 800,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "success": true,
    },
    "testFullName": "with har record puppeteer should generate har file with contents matching snapshot",
    "testName": "should generate har file with contents matching snapshot",
    "timestamp": 2,
  },
  "steps": Array [
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 4,
      "fnName": "goto",
      "index": 1,
      "mhtmlFile": "1.document.mhtml",
      "name": "goto \\"http://jsbin.testim.io/ces\\"",
      "pageId": 0,
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 3,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_goto",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 97,
          },
        ],
        "codeLines": Array [
          "      const { page: playedPage, endTest } = attachController;",
          "      // The delay + mousedown handler inside jsbin is to make sure the requests will stay under specific test",
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
        ],
        "column": 7,
        "fromRowNumber": 94,
        "row": 97,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 100,
      },
      "text": "http://jsbin.testim.io/ces",
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 6,
      "fnName": "click",
      "index": 2,
      "mhtmlFile": "2.document.mhtml",
      "name": "click \\"[data-job=GET_OK]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "[data-job=GET_OK]",
      "startTimestamp": 5,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 98,
          },
        ],
        "codeLines": Array [
          "      // The delay + mousedown handler inside jsbin is to make sure the requests will stay under specific test",
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
        ],
        "column": 7,
        "fromRowNumber": 95,
        "row": 98,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 101,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [
        Object {
          "args": Array [],
          "level": "error",
          "text": "Failed to load resource: the server responded with a status of 404 ()",
          "timestamp": 8,
          "url": "https://postman-echo.com/status/404",
        },
      ],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "mhtmlFile": "3.document.mhtml",
      "name": "click \\"[data-job=GET_404]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "[data-job=GET_404]",
      "startTimestamp": 7,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 99,
          },
        ],
        "codeLines": Array [
          "      // Still, it might be flaky",
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
        ],
        "column": 7,
        "fromRowNumber": 96,
        "row": 99,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 102,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "mhtmlFile": "4.document.mhtml",
      "name": "click \\"[data-job=POST_OK]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "[data-job=POST_OK]",
      "startTimestamp": 10,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 100,
          },
        ],
        "codeLines": Array [
          "      await playedPage.goto('http://jsbin.testim.io/ces');",
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
          "      await endTest({",
        ],
        "column": 7,
        "fromRowNumber": 97,
        "row": 100,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 103,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [
        Object {
          "args": Array [],
          "level": "error",
          "text": "Failed to load resource: the server responded with a status of 404 ()",
          "timestamp": 13,
          "url": "https://postman-echo.com/status/404",
        },
      ],
      "endTimestamp": 14,
      "fnName": "click",
      "index": 5,
      "mhtmlFile": "5.document.mhtml",
      "name": "click \\"[data-job=POST_404]\\"",
      "pageId": 0,
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "[data-job=POST_404]",
      "startTimestamp": 12,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 196,
          },
          Object {
            "column": 7,
            "file": "lib/with-har-record.test.ts",
            "function": "Object.<anonymous>",
            "line": 101,
          },
        ],
        "codeLines": Array [
          "      await playedPage.click('[data-job=GET_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=GET_404]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_OK]', { delay: 800 });",
          "      await playedPage.click('[data-job=POST_404]', { delay: 800 });",
          "",
          "      await endTest({",
          "        success: true,",
        ],
        "column": 7,
        "fromRowNumber": 98,
        "row": 101,
        "sourceFileRelativePath": "lib/with-har-record.test.ts",
        "toRowNumber": 104,
      },
      "unhandledExceptions": Array [],
    },
  ],
}
`;

exports[`with har record puppeteer should generate har file with contents matching snapshot: har file content 1`] = `
Object {
  "log": Object {
    "creator": Object {
      "comment": "Created during a test executed by Testim.",
      "name": "Testim",
      "version": "1.0",
    },
    "entries": Array [
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin.testim.io/ces",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/js/render/edit.js?4.1.4",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/css/edit.css",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "http://jsbin-static.testim.io/images/favicon.png",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "https://postman-echo.com/status/200",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "GET",
          "postData": undefined,
          "url": "https://postman-echo.com/status/404",
        },
        "response": Object {
          "redirectURL": "",
          "status": 404,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "POST",
          "postData": undefined,
          "url": "https://postman-echo.com/post",
        },
        "response": Object {
          "redirectURL": "",
          "status": 200,
          "statusText": "",
        },
      },
      Object {
        "request": Object {
          "comment": undefined,
          "method": "POST",
          "postData": undefined,
          "url": "https://postman-echo.com/status/404",
        },
        "response": Object {
          "redirectURL": "",
          "status": 404,
          "statusText": "",
        },
      },
    ],
    "pages": Array [
      Object {
        "_URL": undefined,
        "title": "http://jsbin.testim.io/ces",
      },
    ],
    "version": "1.2",
  },
}
`;
